cleanup, switch to java 19