@@ -38,7 +38,7 @@ allprojects {
 
 	java {
 		toolchain {
-			languageVersion = JavaLanguageVersion.of(17)
+			languageVersion = JavaLanguageVersion.of(19)
 		}
 	}
 	tasks.withType(JavaCompile) {
@@ -69,40 +69,3 @@ allprojects {
 }
 version = '1.0'
 
-// apply common test configuration
-/*
-gradle.taskGraph.whenReady({ graph ->
-	tasks.withType(Test).each { test ->
-		if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
-			test.configure {
-				jvmArgs += [
-						"-XX:+AllowRedefinitionToAddDeleteMethods",
-						"--add-opens=java.base/java.lang=ALL-UNNAMED",
-						"--add-opens=java.base/java.io=ALL-UNNAMED",
-						]
-			}
-		}
-	}
-})
-*/
-
-/*
-ext {
-	if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
-		defaultJvmArgs +=[
-				"--add-opens=java.base/java.io=ALL-UNNAMED",
-				"--add-opens=java.base/java.lang=ALL-UNNAMED",
-				"--add-opens=java.base/java.nio=ALL-UNNAMED",
-				"--add-opens=java.base/java.nio.file=ALL-UNNAMED",
-				"--add-opens=java.base/java.util=ALL-UNNAMED",
-				"--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-				"--add-opens=java.base/java.util.regex=ALL-UNNAMED",
-				"--add-opens=java.base/java.util.stream=ALL-UNNAMED",
-				"--add-opens=java.base/java.text=ALL-UNNAMED",
-				"--add-opens=java.base/java.time=ALL-UNNAMED",
-				"--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
-				]
-	}
-
-}
-*/
